--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -1,27 +1,26 @@
-name: CI Pipeline
+name: Flask App CI
 
-on:
-  push:
-    branches: [main]
+on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: '3.11'
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Lint Code
+      - name: Run unit tests
         run: |
-          pip install pylint
-          pylint app.py || true
-
+          pip install pytest
+          pytest
