--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,3 +34,32 @@ jobs:
           python app.py &
           sleep 5
           curl -I http://127.0.0.1:5000
+
+  build-and-push-docker:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    steps:
+      # Checkout the code from the repo
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      # Set up Docker Buildx (for building Docker images)
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      # Log in to Docker Hub using GitHub secrets for authentication
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Build the Docker image and tag it
+      - name: Build Docker Image
+        run: |
+          docker build -t rajan29601/flask-app .
+
+      # Push the Docker image to Docker Hub
+      - name: Push Docker Image
+        run: |
+          docker push rajan29601/flask-app:latest
